--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
+  <script src="modulo.js" type="module"></script>
 </head>
 
 <body>
-  <script src="letra.js"></script>
+
 </body>
 
 </html>
